force-app/main/default/objects/KInstance__c/KInstance__c.object-meta.xml
<CustomObject>
    <label>Instance en cours (K)</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instances en cours (K)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>