force-app/main/default/objects/KInstance__c/fields/commentairesServices__c.field-meta.xml
<CustomField>
    <fullName>commentairesServices__c</fullName>
    <label>Commentaires services</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>