force-app/main/default/objects/KInstance__c/fields/commentairesVentes__c.field-meta.xml
<CustomField>
    <fullName>commentairesVentes__c</fullName>
    <label>Commentaires ventes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>