force-app/main/default/objects/KInstance__c/fields/contrat__c.field-meta.xml
<CustomField>
    <fullName>contrat__c</fullName>
    <label>Contrat</label>
    <referenceTo>KContrat__c</referenceTo>
    <relationshipName>contratInstances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>