force-app/main/default/objects/KInstance__c/fields/dateEcheance__c.field-meta.xml
<CustomField>
    <fullName>dateEcheance__c</fullName>
    <label>Date d&apos;échéance</label>
    <type>Date</type>
</CustomField>