force-app/main/default/objects/KInstance__c/fields/dateEntree__c.field-meta.xml
<CustomField>
    <fullName>dateEntree__c</fullName>
    <label>Date d&apos;entrée</label>
    <type>Date</type>
</CustomField>