force-app/main/default/objects/KInstance__c/fields/dateSortie__c.field-meta.xml
<CustomField>
    <fullName>dateSortie__c</fullName>
    <label>Date de sortie</label>
    <type>Date</type>
</CustomField>