force-app/main/default/objects/KInstance__c/fields/nInstance__c.field-meta.xml
<CustomField>
    <fullName>nInstance__c</fullName>
    <externalId>true</externalId>
    <label>N° instance</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>